:art: Fix Map spacing
There was an empty space when the search bra was not there, but it's
space was

--- a/meteor/imports/ui/components/MapComponent/MapComponent.scss
+++ b/meteor/imports/ui/components/MapComponent/MapComponent.scss
@@ -1,6 +1,5 @@
 .MapComponent {
     #mymap {
-        height: 90%;
         margin-bottom: 5px;
     }
 }
